--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,10 @@ platforms = ["osx-arm64"]
 myst_test_widgets = { path = ".", editable = true }
 
 [tool.pixi.tasks]
+
+[tool.pixi.dependencies]
+python = "==3.12"
+ipykernel = ">=7.1.0,<8"
+ipywidgets = ">=8.1.8,<9"
+numpy = ">=2.4.1,<3"
+matplotlib = ">=3.10.8,<4"
