--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,8 +37,15 @@ jobs:
           node-version: 18.x
       - name: Install MyST
         run: npm install -g mystmd
-      - name: Build HTML Assets
-        run: myst build --html --execute
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+      - name: Install Jupyter dependencies
+        run: |
+          pip install jupyter ipykernel
+        - name: Build HTML Assets
+        run: myst build --html --execute --debug
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
