--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ myst_test_widgets = { path = ".", editable = true }
 
 [tool.pixi.dependencies]
 python = "==3.12"
+jupyter = ">=1.1.1,<2"
 ipykernel = ">=7.1.0,<8"
 ipywidgets = ">=8.1.8,<9"
 numpy = ">=2.4.1,<3"
